src/components/status.css
/* ... */
.status.compact-thread .status-thread-badge {
  flex-shrink: 0;
  min-width: 50px;
  justify-content: center;
}
.status.compact-thread .content-compact {
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  font-size: 90%;
}

.status .container {
  flex-grow: 1;
  min-width: 0;
}
.status:not(.small) > .container {
  padding-left: 12px;
}

.status > .container > .meta {
  display: flex;
  gap: 4px;
  /* justify-content: space-between; */
  white-space: nowrap;
}
.status.small > .container > .meta {
  margin-bottom: 4px;
}
.status > .container > .meta > * {
  min-width: 0;
  overflow: hidden;
  /* text-overflow: ellipsis; */
}
.status > .container > .meta .meta-name {
  mask-image: linear-gradient(to left, transparent, black 16px);
  flex-grow: 1;
}
.status.large > .container > .meta {
  min-height: 50px;
}
.status > .container > .meta .arrow {
  color: var(--reply-to-color);
  vertical-align: middle;
}
.status > .container > .meta :is(.time, .edited) {
  color: inherit;
  text-align: end;
  opacity: 0.5;
  text-decoration: none;
  flex-shrink: 0;
  margin-left: 4px;
  white-space: nowrap;
}
.status > .container > .meta a.time {
  position: relative;
  overflow: visible;
}
.status > .container > .meta a.time:is(:hover, :focus) {
  text-decoration: underline;
}
.status > .container > .meta a.time:active,
.status > .container > .meta a.time.is-open {
  text-decoration: none;
  opacity: 1;
}
.status > .container > .meta a.time:after {
  content: '';
  position: absolute;
  inset: -16px;
}
.status > .container > .meta .reply-to {
  opacity: 0.5;
  font-size: smaller;
}

.status-reply-badge {
  display: inline-flex;
  margin: 2px 0 2px 4px;
  gap: 4px;
  align-items: center;
  vertical-align: middle;
}
.status-reply-badge .icon {
  color: var(--reply-to-color);
}
.status-thread-badge {
  vertical-align: middle;
  display: inline-flex;
  margin: 2px 0;
  gap: 4px;
  align-items: center;
  color: var(--reply-to-text-color);
  background: var(--bg-color);
  border: 1px solid var(--reply-to-color);
  border-radius: 4px;
  padding: 4px;
  font-size: 10px;
  line-height: 1;
  text-transform: uppercase;
  opacity: 0.75;
  background-image: repeating-linear-gradient(
    -70deg,
    transparent,
    transparent 3px,
    var(--reply-to-faded-color) 3px,
    var(--reply-to-faded-color) 4px
  );
  font-weight: bold;
}
.status-direct-badge {
  vertical-align: middle;
  display: inline-flex;
  margin: 2px 0;
  gap: 4px;
  align-items: center;
  color: var(--reply-to-text-color);
  background-color: var(--bg-color);
  border: 1px solid var(--reply-to-text-color);
  border-radius: 4px;
  padding: 4px;
  font-size: 10px;
  line-height: 1;
  text-transform: uppercase;
  opacity: 0.75;
  font-weight: bold;
  box-shadow: inset 0 0 0 1px var(--reply-to-color);
}
.status-filtered-badge {
  flex-shrink: 0;
  color: var(--text-insignificant-color);
  /* background: var(--bg-faded-color); */
  /* border: var(--hairline-width) solid var(--bg-color); */
  border: var(--hairline-width) dashed var(--text-insignificant-color);
  border-radius: 4px;
  padding: 4px;
  font-size: 10px;
  line-height: 1;
  text-transform: uppercase;
  font-weight: bold;
  vertical-align: middle;
  display: inline-block;
}
.status-filtered-badge.badge-meta {
  display: inline-flex;
  flex-direction: column;
  position: relative;
  top: calc((9px + 2px) / 2 * -1);
  min-width: 50px;
  text-align: center;
}
.status-filtered-badge.clickable:hover {
  cursor: pointer;
  color: var(--text-color);
  border-color: var(--text-color);
  background: var(--bg-color);
}
.status-filtered-badge.badge-meta > span:first-child {
  white-space: nowrap;
}
.status-filtered-badge.badge-meta > span + span {
  display: block;
  font-size: 9px;
  font-weight: normal;
  text-transform: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  position: absolute;
  width: 100%;
  top: calc(100% + 2px);
  left: 0;
  text-align: center;
}

.status.large > .container > .content-container {
  margin-left: calc(-50px - 16px);
  padding-top: 10px;
  padding-bottom: 10px;
}

.status .content-container.has-spoiler .spoiler {
  margin: 4px 0;
  font-size: 90%;
  border: 1px dashed var(--button-bg-color);
  display: flex;
  gap: 8px;
  align-items: center;
}
.status
  .content-container.has-spoiler:not(.show-spoiler)
  .spoiler
  ~ *:not(.media-container, .card, .media-figure-multiple),
.status
  .content-container.has-spoiler:not(.show-spoiler)
  .spoiler
  ~ .card
  .meta-container,
.status
  .content-container.has-spoiler:not(.show-spoiler)
  .spoiler
  ~ :is(.media-container, .media-figure-multiple)
  figcaption {
  filter: blur(5px) invert(0.5);
  image-rendering: crisp-edges;
  image-rendering: pixelated;
  pointer-events: none;
  user-select: none;
  contain: layout;
  transform: scale(0.97);
  transition: transform 0.1s ease-in-out;
}
.status
  .content-container.has-spoiler:not(.show-spoiler)
  .spoiler
  ~ :is(.media-container, .media-figure-multiple)
  .media
  > *,
.status
  .content-container.has-spoiler:not(.show-spoiler)
  .spoiler
  ~ .card
  > img {
  filter: blur(32px);
  image-rendering: crisp-edges;
  image-rendering: pixelated;
  animation: none !important;
}
.status .content-container.show-spoiler .spoiler {
  border-style: dotted;
}
/* .status
  .content-container.show-spoiler
  .spoiler
  ~ *:not(.media-container, .card),
.status .content-container.show-spoiler .spoiler ~ .card .meta-container {
  filter: none !important;
  transform: none;
  pointer-events: auto;
  user-select: auto;
  text-rendering: auto;
  image-rendering: auto;
}
.status .content-container.show-spoiler .spoiler ~ .media-container .media > *,
.status .content-container.show-spoiler .spoiler ~ .card > img {
  filter: none;
  image-rendering: auto;
} */
/* .status .content a:not(.mention):not(:has(span)) {
  color: inherit;
} */
/* ... */

